@@ -32,6 +32,9 @@ bf(FBB::Log) members as well. It has the following values:
         Log-messages will not have timestamps prepended to them.
     itb(TIMESTAMPS)
         Log-messages will have timestamps prepended to them.
+    itb(UTCTIMESTAMPS)
+        Log-messages will have timestamps showing the UTC time prepended to
+        them.
     )
 
     The enumeration tt(LogManipulator) is used to handle special or
