@@ -42,6 +42,7 @@ manpagesection(PROTECTED CONSTRUCTORS)
         its socket and bf(FBB::InetAddress) part from available external
         objects.
     )
+
     The (public) copy constructor is available.
 
 manpagesection(MEMBER FUNCTIONS)
