@@ -1,3 +1,3 @@
-#!/bin/sh
+#!/bin/bash
 
-g++ -o driver driver.cc -lbobcat
+g++ --std=c++11 -o driver driver.cc -lbobcat
