@@ -1,6 +1,5 @@
 #include "logbuffer"
 
-#include <cstdio>
 #include <ctime>
 #include <string>
 #include <iostream>
