@@ -1,3 +1,14 @@
+bobcat (3.23.01)
+
+  * Using (s)random instead of (s)rand in Randbuffer
+
+  * Log(Buffer) now also supports FBB::UTCTIMESTAMPS to show timestamps in
+    UTC. 
+
+  * Fixed several flaws in man-pages
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Aug 2014 11:42:38 +0200
+
 bobcat (3.23.00)
 
   * Added class SharedCondition, which is used to define a condition variable
